# tanken

./: .gitignore  CLAUDE.md  Cargo.build-spec.json  Cargo.nix  Cargo.toml  crate-hashes.json  flake.nix
module/: default.nix
src/: app.rs  bookmarks.rs  config.rs  fs.rs  input.rs  lib.rs  main.rs  mcp.rs  pane.rs  preview.rs  render.rs  scripting.rs  search.rs  tabs.rs
src/platform/: mod.rs
src/platform/macos/: mod.rs
